<resources>
    <string name="app_name">TugasLoginRegisSharedPreferences</string>
    <string name="password">Password</string>
    <string name="emailaddres">EmailAddres</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="gender">Gender</string>
    <string name="nohandphone">NoHandphone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="registration_form">Registration Form</string>
    <string name="username">Username</string>
</resources>