<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:gravity="center"
        android:background="#05DFCB"
        android:textStyle="bold"
        android:text="@string/registration_form"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/username"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/dob"
        android:inputType="date"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/date_of_birth"/>

    <EditText
        android:id="@+id/phone"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/nohandphone"/>
    
    <EditText
        android:id="@+id/emailaddres"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="@string/emailaddres"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/gender"/>

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:text="@string/male"
        android:id="@+id/male"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <RadioButton
        android:text="@string/female"
        android:id="@+id/female"
        android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        </RadioGroup>


        <LinearLayout
        android:layout_marginTop="21dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
      android:id="@+id/register"
      android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"

    android:text="register"/>

<Button
    android:id="@+id/cancel"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:text="cancel" />





</LinearLayout>
</LinearLayout>


